Bug 96221 - nir/nir_lower_tex.c:202: error: unknown field ‘f32’ specified in initializer
Summary: nir/nir_lower_tex.c:202: error: unknown field ‘f32’ specified in initializer
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Mesa core (show other bugs)
Version: git
Hardware: x86 (IA32) Linux (All)
: medium normal
Assignee: mesa-dev
QA Contact: mesa-dev
URL:
Whiteboard:
Keywords: bisected, regression
Depends on:
Blocks:
 
Reported: 2016-05-26 03:50 UTC by Vinson Lee
Modified: 2016-05-26 23:05 UTC (History)
3 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2016-05-26 03:50:36 UTC
mesa: 5b2675093e863a52b610f112884ae12d42513770 (master 11.3.0-devel)

$ gcc --version
gcc (GCC) 4.4.7 20120313 (Red Hat 4.4.7-17)
Copyright (C) 2010 Free Software Foundation, Inc.
This is free software; see the source for copying conditions.  There is NO
warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

  CC     nir/nir_libnir_la-nir_lower_tex.lo
nir/nir_lower_tex.c: In function ‘convert_yuv_to_rgb’:
nir/nir_lower_tex.c:202: error: unknown field ‘f32’ specified in initializer
nir/nir_lower_tex.c:202: warning: missing braces around initializer
nir/nir_lower_tex.c:202: warning: (near initialization for ‘m[0].<anonymous>.f32’)
nir/nir_lower_tex.c:203: error: unknown field ‘f32’ specified in initializer
nir/nir_lower_tex.c:204: error: unknown field ‘f32’ specified in initializer

commit a41b57679fd659dda1b6df3286b34c13cac7811a
Author: Kristian Høgsberg Kristensen <kristian.h.kristensen@intel.com>
Date:   Sun May 1 21:13:37 2016 -0700

    nir: Add a lowering pass for YUV textures
    
    This lowers sampling from YUV textures to 1) one or more texture
    instructions to sample each plane and 2) color space conversion to RGB.
    
    Reviewed-by: Jordan Justen <jordan.l.justen@intel.com>
    Reviewed-by: Jason Ekstrand <jason@jlekstrand.net>
Comment 1 Jason Ekstrand 2016-05-26 23:05:34 UTC
Fixed by the following commit:

commit 15e553daf0cd5fe70994b6ac5377ff11002357a3
Author: Jason Ekstrand <jason.ekstrand@intel.com>
Date:   Thu May 26 15:38:45 2016 -0700

    nir: Make nir_const_value a union
    
    There's no good reason for it to be a struct of an anonymous union.
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=96221
    Tested-by: Vinson Lee <vlee@freedesktop.org>
    Reviewed-by: Matt Turner <mattst88@gmail.com>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.