src/compiler/nir/nir.h
@@ -1266,15 +1266,13 @@ nir_tex_instr_src_index(nir_tex_instr *instr, nir_tex_src_type type)
    return -1;
 }
 
-typedef struct {
-   union {
-      float f32[4];
-      double f64[4];
-      int32_t i32[4];
-      uint32_t u32[4];
-      int64_t i64[4];
-      uint64_t u64[4];
-   };
+typedef union {
+   float f32[4];
+   double f64[4];
+   int32_t i32[4];
+   uint32_t u32[4];
+   int64_t i64[4];
+   uint64_t u64[4];
 } nir_const_value;
 
 typedef struct {
